--- a/main.html
+++ b/main.html
@@ -4,10 +4,56 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
-<body>
+<body
 	<!-- the entire body must be written by student -->
+	<div style="width:1100px; margin: auto; height:200px;" class="d-flex flex-column justify-between">
+		<h1 class="text-center">Internship Form</h1>
+		<div class="d-flex justify-content-between w-60">
+			<div class="m-1">
+				<label for="first-name-input">First Name</label>
+				<input style="width:350px;" id="first-name-input" type="text" name="fName" required />
+			</div>
+			<div class="m-1">
+				<label for="last-name-input">Last Name</label>
+				<input style="width:350px;" id="last-name-input" type="text" name="lName" required />
+			</div>
+			<div class="m-1">
+				<label style="margin-right:190px" for="email-input">Email Address</label>
+				<input style="width:350px;" id="email-input" type="email" name="email" placeholder="abc@xyz.com" required />
+			</div>
+		</div>
+		<div class="d-flex w-55">
+			<div>
+				<label for="college-input">College</label>
+				<input style="width:500px; margin-right:40px" type="text" id="college-input" name="college" required />
+			</div>
+			<div>
+				<label for="graduation-year">Graduaton Year</label>
+				<select style="margin-right:20px;" required >
+					<option>Choose...</option>
+					<option>2020</option>
+					<option>2021</option>
+					<option>2022</option>
+					<option>2023</option>
+				</select>
+			</div>
+			<div>
+				<label for="roll-no-input">Roll No.</label>
+				<input id="roll-no-input" name="rollNo" type="text" required />
+			</div>
+		</div>
+		<div class="d-flex">
+			<input id="conditions-checkbox" type="checkbox" name="conditions-checkbox" required />
+			<label for="conditions-checkbox">Agree to terms and conditions</label>
+		</div>
+		<div>
+			 <button type="submit" class="btn btn-primary mb-3">Submit Form</button>
+		</div>
+	</div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
