--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 			</div>
 			<div class="m-1">
 				<label class="form-label" for="last-name-input">Last Name</label>
-				<input style="width:350px;" id="last-name-input" type="text" name="lName" required />
+				<input style="width:350px;" id="last-name-input" class="form-control" type="text" name="lName" required />
 			</div>
 			<div class="m-1">
 				<label class="form-label" style="margin-right:190px" for="email-input">Email Address</label>
@@ -31,7 +31,7 @@
 				<input style="width:500px; margin-right:40px" type="text" id="college-input" name="college" required />
 			</div>
 			<div>
-				<label class="form-label" for="grad-year-select">Graduaton Year</label>
+				<label class="form-label" for="grad-year-select">Graduation Year</label>
 				<select id=grad-year-select style="margin-right:20px;" required >
 					<option>Choose...</option>
 					<option>2020</option>
