--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 		<div class="d-flex justify-content-between w-60">
 			<div class="m-1">
 				<label class="form-label" for="first-name-input">First Name</label>
-				<input style="width:350px;" class="form-control invalid-feedback" id="first-name-input" type="text" name="fName" required />
+				<input style="width:350px;" class="form-control" id="first-name-input" type="text" name="fName" required />
 			</div>
 			<div class="m-1">
 				<label class="form-label" for="last-name-input">Last Name</label>
@@ -22,13 +22,13 @@
 			</div>
 			<div class="m-1">
 				<label class="form-label" style="margin-right:190px" for="email-input">Email Address</label>
-				<input style="width:350px;" id="email-input" type="email" name="email" placeholder="abc@xyz.com" required />
+				<input style="width:350px;" id="email-input" class="form-control" type="email" name="email" placeholder="abc@xyz.com" required />
 			</div>
 		</div>
 		<div class="d-flex w-55">
 			<div>
 				<label class="form-label" for="college-input">College</label>
-				<input style="width:500px; margin-right:40px" type="text" id="college-input" name="college" required />
+				<input style="width:500px" type="text" id="college-input" class="form-control" name="college" required />
 			</div>
 			<div>
 				<label class="form-label" for="grad-year-select">Graduation Year</label>
@@ -42,11 +42,11 @@
 			</div>
 			<div>
 				<label class="form-label" for="roll-no-input">Roll No.</label>
-				<input id="roll-no-input" name="rollNo" type="text" required />
+				<input id="roll-no-input" class="form-control" name="rollNo" type="text" required />
 			</div>
 		</div>
 		<div class="d-flex">
-			<input id="conditions-checkbox" type="checkbox" name="conditions-checkbox" required />
+			<input id="conditions-checkbox" class="form-control" type="checkbox" name="conditions-checkbox" required />
 			<label for="conditions-checkbox">Agree to terms and conditions</label>
 		</div>
 		<div>
