--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 		<div class="d-flex justify-content-between w-60">
 			<div class="m-1">
 				<label class="form-label" for="first-name-input">First Name</label>
-				<input style="width:350px;" class="form-control" id="first-name-input" type="text" name="fName" required />
+				<input style="width:350px;" class="form-control " id="first-name-input" type="text" name="fName" required />
 			</div>
 			<div class="m-1">
 				<label class="form-label" for="last-name-input">Last Name</label>
@@ -32,7 +32,7 @@
 			</div>
 			<div>
 				<label class="form-label" for="grad-year-select">Graduation Year</label>
-				<select id=grad-year-select style="margin-right:20px;" required >
+				<select id=grad-year-select class="form-select" style="margin-right:20px;" required >
 					<option>Choose...</option>
 					<option>2020</option>
 					<option>2021</option>
@@ -46,7 +46,7 @@
 			</div>
 		</div>
 		<div class="d-flex">
-			<input id="conditions-checkbox" class="form-control" type="checkbox" name="conditions-checkbox" required />
+			<input id="conditions-checkbox" class="form-check-input" type="checkbox" name="conditions-checkbox" required />
 			<label for="conditions-checkbox">Agree to terms and conditions</label>
 		</div>
 		<div>
