--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 		<div class="d-flex justify-content-between w-60">
 			<div class="m-1">
 				<label class="form-label" for="first-name-input">First Name</label>
-				<input style="width:350px;" class="form-control " id="first-name-input" type="text" name="fName" required />
+				<input style="width:350px;" class="form-control invalid-feedback" id="first-name-input" type="text" name="fName" required />
 			</div>
 			<div class="m-1">
 				<label class="form-label" for="last-name-input">Last Name</label>
